--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,6 +12,6 @@
     <p class="post-meta">
       {{ post.published_date }}</p>
       <p>{{ post.text|truncatewords:25 }}</p>
-  </div>
+  </div><hr>
   {% endfor %}
 {% endblock %}
