remove full nav bar and posts listed in created date order

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
       </h2>
     </a>
     <p class="post-meta">
-      {{ post.published_date }}</p>
+      {{ post.created_date }}</p>
       <p>{{ post.text|truncatewords:25 }}</p>
   </div><hr>
   {% endfor %}
