--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,12 +29,12 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Home</a>
+    <!-- <div class="container"> -->
+      <a class="navbar-brand" href="base.html">Home</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Home
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">About Me</a>
@@ -49,8 +49,8 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
   </nav>
 
   <!-- Page Header -->
@@ -79,7 +79,7 @@
         {% endif %}
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <a class="btn btn-primary float-right" href="#">All Posts &rarr;</a>
         </div>
       </div>
     </div>
