--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <div class="post">
-        {% if post.published_date %}
+        {% if post.created_date %}
             <div class="post-meta">
-                {{ post.published_date }}
+                {{ post.created_date }}
                 {% if user.is_authenticated %}
                 <a class="btn btn-default float-right" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
                 {% endif %}
