--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <!-- <div class="container"> -->
-      <a class="navbar-brand" href="base.html">Home</a>
+      <a class="navbar-brand" href="{% url 'post_index' %}">Home</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Home
         <i class="fas fa-bars"></i>
       </button>
@@ -78,9 +78,6 @@
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         {% endif %}
         <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">All Posts &rarr;</a>
-        </div>
       </div>
     </div>
   </div>
