--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -60,7 +60,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Jessigu Learns to Code</h1>
+            <h1>Jessigu</h1>
+            <h1>Learns to Code</h1>
             <span class="subheading"></span>
           </div>
         </div>
